[tool.poetry]
name = "cee-model"
version = "0.1.0"
description = "Agent-based model simulations for collective endowment effects"
authors = ["Ari Dyckovsky <aridyckovsky@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
networkx = "^3.4.2"
mesa = "^3.0.3"
polars = "^1.16.0"
altair = "^5.5.0"
numpy = "^2.1.3"
pyarrow = "^18.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
